# HistoricalMilitaryBattles

./: .gitignore  README.md  app.py  conflicts.py  conflicts_vs.ipynb  dash_manager.py  deaths.py  main.ipynb  map.py  map_explanation.py  old.txt  opponent.py  pyproject.toml  regions.md  requirements.txt  troops.py
assets/: custom.css  loading.css
data/: battles-parsed.csv  battles_clean.csv  coordinates.json  datapackage.json  get_locn.py
data/geo/: clean_geo.py  concat_geo.py  concat_simplify.json  concat_simply.geojson  geoPoints.geojson
data/gjsons/: hesse.geojson  louisiana.geojson  maryland.geojson  missouri.geojson  quito.geojson  saxony.geojson  spanish_netherlands.geojson
gjsons/: spanish_netherlands.geojson
ui/: layout.py
