[tool.poetry]
name = "HistoricalMilitaryBattles"
version = "1.0"
repository = "https://github.com/fcocea/HistoricalMilitaryBattles"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
dash-mantine-components = "^0.14.3"
numpy = "^2.0.0"
pandas = "^2.2.2"
dash-iconify = "^0.1.2"
shapely = "^2.0.4"
geopandas = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
